[gd_scene load_steps=4 format=2]

[ext_resource path="res://Difficulty_Chooser.gd" type="Script" id=1]
[ext_resource path="res://font.tres" type="DynamicFont" id=2]
[ext_resource path="res://Background.tscn" type="PackedScene" id=3]

[node name="Difficulty_Chooser" type="Node2D" index="0"]

z_index = 50
script = ExtResource( 1 )
_sections_unfolded = [ "Z Index" ]

[node name="Control" type="Control" parent="." index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 40.0
margin_bottom = 40.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1

[node name="CenterContainer" type="CenterContainer" parent="Control" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 216.0
margin_right = 512.0
margin_bottom = 376.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
use_top_left = false

[node name="VBoxContainer" type="VBoxContainer" parent="Control/CenterContainer" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 147.0
margin_right = 365.0
margin_bottom = 418.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_constants/separation = 50
alignment = 1
_sections_unfolded = [ "custom_constants" ]

[node name="Easy" type="Button" parent="Control/CenterContainer/VBoxContainer" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 58.0
margin_right = 218.0
margin_bottom = 125.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 0.6, 0.458824, 0.466667, 1 )
custom_colors/font_color_hover = Color( 0.964706, 0.839216, 0.737255, 1 )
custom_colors/font_color_pressed = Color( 0.964706, 0.839216, 0.737255, 1 )
toggle_mode = false
enabled_focus_mode = 0
shortcut = null
group = null
text = "Easy"
flat = true
align = 1
_sections_unfolded = [ "Rect" ]

[node name="Normal" type="Button" parent="Control/CenterContainer/VBoxContainer" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 175.0
margin_right = 218.0
margin_bottom = 242.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 0.6, 0.458824, 0.466667, 1 )
custom_colors/font_color_hover = Color( 0.964706, 0.839216, 0.737255, 1 )
custom_colors/font_color_pressed = Color( 0.964706, 0.839216, 0.737255, 1 )
toggle_mode = false
enabled_focus_mode = 0
shortcut = null
group = null
text = "Normal"
flat = true
align = 1

[node name="Hard" type="Button" parent="Control/CenterContainer/VBoxContainer" index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 292.0
margin_right = 218.0
margin_bottom = 359.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 0.6, 0.458824, 0.466667, 1 )
custom_colors/font_color_hover = Color( 0.964706, 0.839216, 0.737255, 1 )
custom_colors/font_color_pressed = Color( 0.964706, 0.839216, 0.737255, 1 )
toggle_mode = false
enabled_focus_mode = 0
shortcut = null
group = null
text = "Hard"
flat = true
align = 1

[node name="Label" type="Label" parent="Control" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 512.0
margin_bottom = 125.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 0.964706, 0.839216, 0.737255, 1 )
custom_colors/font_color_shadow = Color( 0.6, 0.458824, 0.466667, 1 )
text = "Choose A Difficulty"
align = 1
valign = 1
autowrap = true
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "custom_colors", "custom_fonts" ]

[node name="Go_Back" type="Button" parent="Control" index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 147.0
margin_top = 641.0
margin_right = 365.0
margin_bottom = 708.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 0.6, 0.458824, 0.466667, 1 )
custom_colors/font_color_hover = Color( 0.964706, 0.839216, 0.737255, 1 )
custom_colors/font_color_pressed = Color( 0.964706, 0.839216, 0.737255, 1 )
toggle_mode = false
enabled_focus_mode = 0
shortcut = null
group = null
text = "Go Back"
flat = true
align = 1

[node name="Background" parent="." index="1" instance=ExtResource( 3 )]

[connection signal="pressed" from="Control/CenterContainer/VBoxContainer/Easy" to="." method="_on_Easy_pressed"]

[connection signal="pressed" from="Control/CenterContainer/VBoxContainer/Normal" to="." method="_on_Normal_pressed"]

[connection signal="pressed" from="Control/CenterContainer/VBoxContainer/Hard" to="." method="_on_Hard_pressed"]

[connection signal="pressed" from="Control/Go_Back" to="." method="_on_Go_Back_pressed"]


